hw04/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      #      initContainers:
      #        - name: wait-for-db
      #          image: busybox
      #          command: [ 'sh', '-c', 'echo "Waiting for DB..." && until nc -z postgresql:5432; do sleep 2; done' ]

      containers:
        - name: otus-app
          image: lexxyar/otus-app:v1.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
